--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -11,6 +11,10 @@ on:
       - 'android/**'
   workflow_dispatch:
 
+env:
+  GOOGLE_SERVICES_JSON_DEBUG: ${{ secrets.GOOGLE_SERVICES_JSON_DEBUG }}
+  GOOGLE_SERVICES_JSON_RELEASE: ${{ secrets.GOOGLE_SERVICES_JSON_RELEASE }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,8 +24,9 @@ jobs:
         working-directory: android
 
     steps:
-    - uses: actions/checkout@v4
-    - name: set up JDK 21
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
@@ -34,12 +39,12 @@ jobs:
     - name: Create google-services.json for debug
       run: |
         mkdir -p ./app/src/debug
-        echo '${{ secrets.GOOGLE_SERVICES_JSON_DEBUG }}' | base64 --decode > ./app/src/debug/google-services.json
+        echo "$GOOGLE_SERVICES_JSON_DEBUG" | base64 --decode > ./app/src/debug/google-services.json
     
     - name: Create google-services.json for release
       run: |
-        mkdir -p ./app
-        echo '${{ secrets.GOOGLE_SERVICES_JSON_RELEASE }}' | base64 --decode > ./app/google-services.json
+        mkdir -p ./app/src/release
+        echo "$GOOGLE_SERVICES_JSON_RELEASE" | base64 --decode > ./app/src/release/google-services.json
 
     - name: Clean build with Gradle
       run: ./gradlew clean build
