--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -66,5 +66,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: app-release
-          path: ./app/build/outputs/apk/release/app-release.apk
+          path: android/build/outputs/apk/release/app-release.apk
           overwrite: 'true'
