--- a/.github/workflows/android-cd.yml
+++ b/.github/workflows/android-cd.yml
@@ -2,7 +2,7 @@ name: YaguBogu Android CD
 
 on:
   pull_request:
-    branches: [ "dev-an" ]
+    branches: [ "dev" ]
     paths:
       - 'android/**'
       
