chore: docker 도입 (#340)
* chore: docker 도입

* chore: workflow docker 도입

* chore: workflow 이름 변경

--- a/.github/workflows/backend-dev-be.yml
+++ b/.github/workflows/backend-dev-be.yml
@@ -41,5 +41,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Build (prod profile)
-        run: ./gradlew clean build
+      - name: Run Tests
+        run: ./gradlew test
+
+      - name: Build
+        run: ./gradlew build -x test
