--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.YaguBogu"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.setting.SettingActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.livetalk.chat.LivetalkChatActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
