--- a/.github/workflows/backend-main.yml
+++ b/.github/workflows/backend-main.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: [ self-hosted, production ]
     env:
       IMAGE: yagubogu/yagubogu-backend
-      TAG: prod-${{ github.sha }}
+      TAG: prod-latest
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3.3.0
