--- a/.github/workflows/backend-main.yml
+++ b/.github/workflows/backend-main.yml
@@ -1,9 +1,12 @@
 name: Release & Deploy (Auto SemVer)
 
 on:
-  pull_request_target:
-    types: [ closed ]
-    branches: [ "main" ]   # 운영 브랜치로 조정
+  push:
+    branches: [ "chore/356" ]
+#on:
+#  pull_request_target:
+#    types: [ closed ]
+#    branches: [ "main" ]   # 운영 브랜치로 조정
 env:
   IMAGE: yagubogu/yagubogu-backend
 
