--- a/.github/workflows/backend-main.yml
+++ b/.github/workflows/backend-main.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   release:
-    if: github.event.pull_request.merged == true
+    #    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.semver.outputs.next_version }}
