chore: digest 변수 선언

--- a/.github/workflows/backend-main.yml
+++ b/.github/workflows/backend-main.yml
@@ -84,6 +84,8 @@ jobs:
         run: |
           VER='${{ steps.semver.outputs.next_version }}'
           DIGEST="$(docker buildx imagetools inspect $IMAGE:$VER | sed -n 's/^Digest:[[:space:]]*//p' | head -n1)"
+          echo "digest=$DIGEST" >> "$GITHUB_OUTPUT"
+
 
   cd:
     needs: release
